# rules_rules_clippy_repo

./: .bazelrc  .gitignore  Cargo.toml  README.md  WORKSPACE
hello_world/: BUILD  Cargo.toml  build.rs
hello_world/src/: main.rs
