[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4",  features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tonic = { version = "0.9", features = ["tls", "gzip", "tls-roots"] }
tonic-build = "0.9"
async-trait = "*"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
log = "*"
futures = "*"
async-rwlock = "*"
itertools = "*"
actix-web-lab = "0.16"
prometheus = { version = "0.13.3", features = ["process"] }
lazy_static = "1.4"
uuid = {version = "1.3.0", features = [ "v4", "fast-rng"] }
prost = "0.11"
prost-types = "0.11"
async-lock = "2.7.0"
sha256 = "1.1.3"
tower = "*"
tonic-health = "0.9"
openssl = "0.10.61"
native-tls = "0.2.11"

[dev-dependencies]
actix-rt = "*"
assert_unordered = "*"
tonic-build = "*"

[build-dependencies]
tonic-build = "*"
