[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4",  features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tonic = { version = "0.9", features = ["tls", "gzip", "tls-roots"] }
tonic-build = "0.9"
async-trait = "*"
tokio = { version = "1.35", features = ["full"] }
log = "*"
futures = "*"
async-rwlock = "*"
itertools = "*"
prometheus = { version = "0.13.3", features = ["process"] }
tracing = {version = "*", features = ["log"]}
tracing-subscriber = {version = "*", features = ["registry", "env-filter"]}
tracing-logfmt = "*"
tracing-log = "*"
prost = "0.11"
prost-types = "0.11"
kube = { version = "0.82.2", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_23"] }
schemars = "0.8.12"
opentelemetry = { version = "0.19.0", features = ["rt-tokio", "rt-async-std"] }
opentelemetry-otlp = "0.12"
tracing-opentelemetry = "0.19.0"
opentelemetry_sdk = { version = "0.19.0", features = ["rt-tokio", "rt-async-std"] }
tower = "*"
tonic-health = "0.9"
launchdarkly-server-sdk = "1.1.3"
openssl = "0.10.61"
native-tls = "0.2.11"

[dev-dependencies]
actix-rt = "*"
assert_unordered = "*"
tonic-build = "*"

[build-dependencies]
tonic-build = "*"
