[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# removing any of the features makes it pass
tonic = { version = "0.9", features = ["tls", "gzip"] }
# appears to be required
tonic-build = "0.9"
# appears to be required
async-trait = "*"
tokio = { version = "1.35" }
# appears to be required
futures = "*"
# appears to be required
async-rwlock = "*"
# appears to be required
itertools = "*"
# appears to be required
prometheus = { version = "*", features = ["process"] }
tracing = {version = "*"}
tracing-subscriber = {version = "*", features = ["env-filter"]}
tracing-logfmt = "*"
tracing-log = "*"
# appears to be required
prost = "0.11"
# appears to be required
prost-types = "0.11"
kube = { version = "0.82.2", features = ["runtime", "derive"] }
k8s-openapi = { version = "*", features = ["v1_23"] }
# appears to be required
schemars = "0.8.12"
opentelemetry = { version = "0.19.0", features = ["rt-tokio", "rt-async-std"] }
# appears to be required
opentelemetry-otlp = "0.12"
tracing-opentelemetry = "0.19.0"
opentelemetry_sdk = { version = "0.19.0" }
tonic-health = "0.9"
# appears to be required
launchdarkly-server-sdk = "*"
